Worked on Particle Systems + fixes + GUI Elements
Made:
	- Worked on Particle Systems
	- Worked on Graph view GUI Element
	- Fixed and cleaned code
	- Worked on occlusion queries using OpenGL

To Do:
	- Finish work on Particle Systems + Graph view GUI Element

Note : Don't forget to compile SPARK library to use Particle Systems

--- a/.gitignore
+++ b/.gitignore
@@ -3451,3 +3451,42 @@ SSWE/data/Architecture/tex/wind2N.jpg
 SSWE/data/Architecture/tex/woodD.jpg
 SSWE/data/Architecture/tex/woodN.jpg
 SSWE/data/Architecture/ZAMOK.mtl
+SSWE/SSWE_dbg.app/Contents/Info.plist
+SSWE/SSWE_dbg.app/Contents/MacOS/SSWE_dbg
+SSWE/SSWE_dbg.app/Contents/PkgInfo
+SSWE/SSWE_dbg.app/Contents/Resources/MainMenu.nib
+SSWE/Big Height Maps/Test/heightmaps/map1.png
+SSWE/Big Height Maps/Test/heightmaps/map10.png
+SSWE/Big Height Maps/Test/heightmaps/map11.png
+SSWE/Big Height Maps/Test/heightmaps/map12.png
+SSWE/Big Height Maps/Test/heightmaps/map13.png
+SSWE/Big Height Maps/Test/heightmaps/map14.png
+SSWE/Big Height Maps/Test/heightmaps/map15.png
+SSWE/Big Height Maps/Test/heightmaps/map16.png
+SSWE/Big Height Maps/Test/heightmaps/map2.png
+SSWE/Big Height Maps/Test/heightmaps/map3.png
+SSWE/Big Height Maps/Test/heightmaps/map4.png
+SSWE/Big Height Maps/Test/heightmaps/map5.png
+SSWE/Big Height Maps/Test/heightmaps/map6.png
+SSWE/Big Height Maps/Test/heightmaps/map7.png
+SSWE/Big Height Maps/Test/heightmaps/map8.png
+SSWE/Big Height Maps/Test/heightmaps/map9.png
+SSWE/Big Height Maps/Test/textures/color1.png
+SSWE/Big Height Maps/Test/textures/color10.png
+SSWE/Big Height Maps/Test/textures/color11.png
+SSWE/Big Height Maps/Test/textures/color12.png
+SSWE/Big Height Maps/Test/textures/color13.png
+SSWE/Big Height Maps/Test/textures/color14.png
+SSWE/Big Height Maps/Test/textures/color15.png
+SSWE/Big Height Maps/Test/textures/color16.png
+SSWE/Big Height Maps/Test/textures/color2.png
+SSWE/Big Height Maps/Test/textures/color3.png
+SSWE/Big Height Maps/Test/textures/color4.png
+SSWE/Big Height Maps/Test/textures/color5.png
+SSWE/Big Height Maps/Test/textures/color6.png
+SSWE/Big Height Maps/Test/textures/color7.png
+SSWE/Big Height Maps/Test/textures/color8.png
+SSWE/Big Height Maps/Test/textures/color9.png
+SSWE/ParticlesTests/SceneFireCamp.mtl
+SSWE/ParticlesTests/Terrain_Diff.bmp
+SSWE/data/Characters/zombie/test.anc
