Worked on rendering
Made:
	- Found how to configure SPARK flags

To Do:
	- Continue particles editor development

--- a/.gitignore
+++ b/.gitignore
@@ -3490,3 +3490,7 @@ SSWE/Big Height Maps/Test/textures/color9.png
 SSWE/ParticlesTests/SceneFireCamp.mtl
 SSWE/ParticlesTests/Terrain_Diff.bmp
 SSWE/data/Characters/zombie/test.anc
+SSWE/LBoat.world
+SSWE/data/New/Boat Fishing 02.7z
+SSWE/data/New/Boat Fishing 02/boat_fishing02.tga
+SSWE/data/New/Boat Fishing 02/boat_fishing_02.mtl
