Cleaned directory + Working on version for alpha tests
Made:
	- Cleaned a little the directory
	- Working on a stable version for alpha tests
		- Improved on what is "fixing bugs ^^"
		- Worked on renders
		- Worked on user experience
		- Added some specifications in GUI

--- a/SSWEProject/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK DLL.vcxproj
+++ b/SSWEProject/SPARK/SPARK155/projects/vc2008/SPARK engine/SPARK DLL.vcxproj
@@ -49,6 +49,7 @@
     <OutDir>..\..\..\lib\vc2008\dynamic\</OutDir>
     <IntDir>$(ProjectName)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>$(ProjectName)_d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>..\..\..\lib\vc2008\dynamic\</OutDir>
@@ -94,7 +95,8 @@
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)SPARK.dll</OutputFile>
-      <Version>1.00.00</Version>
+      <Version>
+      </Version>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <OptimizeReferences>true</OptimizeReferences>
       <NoEntryPoint>false</NoEntryPoint>
