Working on shaders development (filters) + preparing 3D models for physic simulation
Made:
	- Working on shaders development (filters)
	- Prepared 3D models for physic simulation

To Do:
	- Finish work on shaders development (filters)
		- Add context menu to add directly from a file
	- Work on lua functions for shaders development (callback)

--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -182,6 +182,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CRenderCallbackScripting.cpp" />
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CShaderCallback.cpp" />
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditEffects.cpp" />
+    <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditFilters.cpp" />
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterials.cpp" />
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterialsCallback.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\Animators\CRotationAnimator.cpp" />
@@ -290,6 +291,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CRenderCallbackScripting.h" />
     <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CShaderCallback.h" />
     <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditEffects.h" />
+    <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditFilters.h" />
     <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterials.h" />
     <ClInclude Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterialsCallback.h" />
     <ClInclude Include="SSWELib\SceneNodes\Animators\CRotationAnimator.h" />
