Worked on IMonitor
Made:
	- Worked on IMonitor interface. Now only interfaces are used
	- Removed some bugs

To Do:
	- Continue work on filters development (console)

--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -258,6 +258,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="include\ISSWECoreData.h" />
     <ClInclude Include="include\ISSWEEvents.h" />
     <ClInclude Include="include\ISSWELibPlugin.h" />
+    <ClInclude Include="include\ISSWERender.h" />
     <ClInclude Include="include\ITool.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SSWELib.h" />
