Working on Global Illumination and Demo
Made :
	- Edition is nos more visual with the purple material on texture
	- Working on global illumination
	- Finish setting Metro2033 Map for creating a first game version demo

To Do :
	- Finish particle systems x)
	- Finish demo map and create game

--- a/.gitignore
+++ b/.gitignore
@@ -4207,3 +4207,58 @@ SSWE/data/Architecture/Riga/riga/riga/tex/wm_potek_03.jpg
 SSWE/data/Architecture/Riga/riga/riga/tex/wood_boards.jpg
 SSWE/data/Architecture/Riga/riga/riga/tex/wood_doski_3.jpg
 SSWE/data/Architecture/Riga/riga/riga/tex/wood_pol.jpg
+SSWE/data/Architecture/hunter/._bin
+SSWE/data/Architecture/hunter/._spotlight.3ds
+SSWE/data/Architecture/hunter/hunter/hunter/tex/Thumbs.db
+SSWE/data/Architecture/hunter/spotlight.3ds
+SSWE/data/gpurad/blank_rad_gpu_tex
+SSWE/data/gpurad/BrickOldDirty0055_11_S.png
+SSWE/data/gpurad/brownbricks.png
+SSWE/data/gpurad/ceilingtile.png
+SSWE/data/gpurad/concrete1.png
+SSWE/data/gpurad/ConcreteNew0012_2_S.png
+SSWE/data/gpurad/CScreenQuad.h
+SSWE/data/gpurad/CShaderPre.cpp
+SSWE/data/gpurad/CShaderPre.h
+SSWE/data/gpurad/CUVTree.cpp
+SSWE/data/gpurad/CUVTree.h
+SSWE/data/gpurad/dirt1.png
+SSWE/data/gpurad/dirtybricks.png
+SSWE/data/gpurad/EffectCB.h
+SSWE/data/gpurad/EffectHandler.cpp
+SSWE/data/gpurad/EffectHandler.h
+SSWE/data/gpurad/EffectShaders.h
+SSWE/data/gpurad/Floor02.jpg
+SSWE/data/gpurad/floortile.png
+SSWE/data/gpurad/lightmap1.png
+SSWE/data/gpurad/main.cpp
+SSWE/data/gpurad/MainBuilding.irrmesh
+SSWE/data/gpurad/mtrand.cpp
+SSWE/data/gpurad/mtrand.h
+SSWE/data/gpurad/newconcrete.png
+SSWE/data/gpurad/oldplanks.png
+SSWE/data/gpurad/PlanksOld0149_15_S.png
+SSWE/data/gpurad/ppAddF.glsl
+SSWE/data/gpurad/ppAddV.glsl
+SSWE/data/gpurad/ppFinalF.glsl
+SSWE/data/gpurad/ppFinalV.glsl
+SSWE/data/gpurad/ppFrag.glsl
+SSWE/data/gpurad/ppVert.glsl
+SSWE/data/gpurad/stairs.png
+SSWE/data/gpurad/testpattern.png
+SSWE/data/gpurad/types.h
+SSWE/data/gpurad/XEffects.h
+SSWE/data/Vegetation/._.DS_Store
+SSWE/data/Vegetation/._fern
+SSWE/data/Vegetation/._fern.zip
+SSWE/data/Vegetation/.DS_Store
+SSWE/data/Vegetation/fern.zip
+SSWE/data/Vegetation/fern/._.DS_Store
+SSWE/data/Vegetation/fern/._fern.c4d
+SSWE/data/Vegetation/fern/._tex
+SSWE/data/Vegetation/fern/.DS_Store
+SSWE/data/Vegetation/fern/fern.c4d
+SSWE/data/Vegetation/fern/tex/._RIMG0135.jpg
+SSWE/data/Vegetation/fern/tex/._RIMG0135a.jpg
+SSWE/data/Vegetation/fern/tex/RIMG0135.jpg
+SSWE/data/Vegetation/fern/tex/RIMG0135a.jpg
